# fast-api-clean-architecture

./: .env.example  .env.exmaple  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/controllers/: pages.py  users.py
app/api/general_pages/: route_homepage.py
app/api/repository/: __init__.py  pages.py  users.py
app/api/schemas/: users.py
app/api/services/: pages.py  users.py
app/api/v1/: routes.py
app/api/v1/controllers/: users.py
app/api/v1/repository/: users.py
app/api/v1/schemas/: users.py
app/api/v1/services/: users.py
app/core/: __init__.py  config.py  hashing.py  routes.py  security.py
app/core/db/: __init__.py  base.py  session.py
app/migrations/: env.py  run.py
app/migrations/versions/: 5c6978a4a586_initial_migrations.py  87667f8bbc98_intialize.py  c1b0c6f7b80e_initial_tables.py
app/models/: __init__.py  jobs.py  users.py
app/templates/general_pages/: homepage.html
nginx/: default.conf
